Revert "AMBARI-24692 - JDK 11 support for Log Search (#2843)"
This reverts commit 42a46e961d3ea2ce53328aa8f2fa41998e4379c3.